ignore and remove generated files from git index

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ desktop.ini
 .Trashes
 ehthumbs.db
 Thumbs.db
+/unity-constants-generator/Assets/Unity Constants
+/unity-constants-generator/Assets/Unity Constants.meta
